--- a/tyyli.css
+++ b/tyyli.css
@@ -390,3 +390,23 @@ a { color: var(--accent); }
   border: none;
   display: block;
 }
+
+
+#videoControls {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin: -30px auto 0 auto;
+}
+#videoControls button {
+  padding: 6px 12px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #0077cc;
+  color: white;
+}
+#videoControls button.active {
+  background: #005fa3;
+}
